# ESP32-Microplastic-Detection-SIH

./: .gitignore  Demo.md  LICENSE  README.md  WARP.md  docker-compose.yml  pyproject.toml  requirements.txt  test_backend.py
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/services/: image_processor.py
esp32-simulator/: Dockerfile  requirements.txt  simulator.py
firmware/: README.md  microplastic_detector.ino  microplastic_detector_enhanced.ino
hardware/: assembly_guide.md  components_list.md
hardware/bom/: components_list.md
hardware/circuits/: circuit_diagram.md
mqtt-config/: mosquitto.conf
presentation/: SIH_Presentation_Outline.md
software/: microplastic_detector.py  train_model.py
software/backend/: main.py  requirements.txt
software/image-processing/: config.yaml  microplastic_detector.py  requirements.txt
software/ml-forecasting/: pollution_forecaster.py  requirements.txt
